--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.2.4",
     "express": "^4.11.2",
     "express-session": "^1.10.2",
+    "request": "^2.53.0",
     "sqlite3": "^3.0.5"
   }
 }
